[tool.poetry]
name = "ragfinder"
version = "0.1.0"
description = "RAG model to ask questions to your PDFs."
authors = ["Daksh <prajapdh@mail.uc.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.2.16"
langchain-community = "^0.2.16"
tavily-python = "^0.4.0"
firecrawl-py = "^1.2.3"
langchain-openai = "^0.1.23"
langchain-ollama = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
